# kdegraphics-mobipocket

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  QMobipocketConfig.cmake  QMobipocketConfig.cmake.in  org.kde.kdegraphics-mobipocket.appdata.xml  org.kde.kdegraphics-mobipocket.metainfo.xml
autotests/: CMakeLists.txt  bitreadertest.cpp  decompressortest.cpp  kpdbtest.cpp  metadatatest.cpp  mobipockettest.cpp  testsconfig.h.in  texttest.cpp
autotests/testdata/: first-men-in-the-moon.azw3  first-men-in-the-moon.mobi  invalid-exth-record-length.mobi
lib/: CMakeLists.txt  bitreader_p.h  decompressor.cpp  decompressor.h  kpdb.cpp  kpdb.h  kpdb_p.h  mobiheader_p.h  mobipocket.cpp  mobipocket.h  palmdocheader_p.h  pdb.cpp  pdb_p.h  qfilestream.cpp  qfilestream.h  qmobipocket_export.h  qmobipocket_private_export.h  utils.cpp  utils.h
okular/: CMakeLists.txt  generator_mobi.cpp  libokularGenerator_mobi.desktop  okularApplication_mobi.desktop  okularMobi.desktop
strigi/: CMakeLists.txt  mobiendanalyzer.cpp  mobithumbnail.cpp  mobithumbnail.desktop
thumbnailers/: CMakeLists.txt  mobithumbnail.cpp  mobithumbnail.desktop
tools/: CMakeLists.txt  kmobimetadata.cpp  mobidump.cpp
